# jieba-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
cjieba/lib/: jieba.cpp
cppjieba/limonp/: BoundedBlockingQueue.hpp
src/: bindgen.rs  jieba.cpp  lib.rs  main.rs
