[package]
name = "jieba"
version = "0.1.0"

license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "segment"
documentation = "https://docs.rs/sincere"
homepage      = "https://github.com/mitum/sincere"
repository    = "https://github.com/mitum/sincere"
keywords      = ["segment", "words", "jieba"]
readme        = "README.md"
build         = "build.rs"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[build-dependencies]
gcc = { version = "0.3", features = ["parallel"] }
